# goat

./: .gitmodules  LICENSE
arduino_teleop/: README.md
arduino_teleop/teleop/: teleop.ino  teleop_status.ino
arduino_teleop/tune_pid/: tune_pid.ino
cmd_vel_selector/: CMakeLists.txt  package.xml
cmd_vel_selector/include/: cmd_vel_selector_node.h
cmd_vel_selector/src/: cmd_vel_selector_node.cpp  node_driver.cpp
encoder_odometry/: CMakeLists.txt  README.md  package.xml
encoder_odometry/include/: twist_publisher.h
encoder_odometry/src/: encoder_odometry_node.cpp  twist_publisher.cpp
gazebo-odometry/: CMakeLists.txt  instructions.md  package.xml
gazebo-odometry/src/: odometry_node.cpp
goat_description/: .gitignore  CMakeLists.txt  LICENSE.md  README.md  package.xml
goat_description/launch/: display.launch  example.launch  mybot_world.launch  spawn_urdf.launch
goat_description/robots/: goat.gazebo  goat.urdf  goat.urdf.xacro
goat_description/rviz/: goat.rviz
goat_description/velodyne/velodyne_description/urdf/: VLP-16.urdf.xacro  example.urdf.xacro
goat_description/world/: cone.xacro  cone_hell.world  example.world  example.world.xacro
goat_launch/: CMakeLists.txt  README.md  package.xml
goat_launch/config/: cartographer.lua  cartographer_no_odom.lua  demo_3d.rviz
goat_launch/launch/: camera.launch  cartographer.launch  controller.launch  encoders.launch  goat_odom.launch  gps.launch  imu.launch  jetson_competition.launch  laser.launch  localization_encoders.launch  localization_imu.launch  localization_imu_encoders.launch  localization_imu_encoders_visual.launch  localization_imu_gps_encoders.launch  localization_imu_gps_encoders_visual.launch  locomotor.launch  make_goal.launch  mapping.launch  move_base.launch  nuc_competition.launch  nuc_competition_combined.launch  nuc_competition_combined_visualize.launch  spatio_temporal.launch  state.launch  teleop_ps4.launch  white_line.launch
goat_launch/params/: base_global_params.yaml  base_local_planner_params.yaml  camera.yaml  controller_params.yaml  costmap_common_params.yaml  encoders.yaml  global_costmap_params.yaml  goat_odom.yaml  gps.yaml  imu.yaml  laser.yaml  local_costmap_params.yaml  localization.yaml  localization_e.yaml  localization_i.yaml  localization_ie.yaml  localization_iev.yaml  localization_ige.yaml  localization_igev.yaml  locomotor_params.yaml  mapping.yaml  move_base.yaml  north.txt  path_planning_params.yaml  practice.txt  qualification.txt  south.txt  spatio_temporal_local_params.yaml  state.yaml  teleop_ps4.yaml
goat_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
goat_moveit_config/config/: controllers.yaml  fake_controllers.yaml  goat.srdf  goat_moveit_controller_manager.launch.xml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
goat_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
goat_msgs/: CMakeLists.txt  README.md  package.xml
goat_msgs/msg/: PointArrayStamped.msg
imu_temporal_filter/: CMakeLists.txt  package.xml
imu_temporal_filter/src/: imu_temporal_filter_node.cpp
make_goal/: CMakeLists.txt  README.md  TODO  dude-lawn-gps-coords.txt  package.xml
make_goal/include/: goal_director.h  message_utils.h
make_goal/src/: goal_director.cpp  make_goal.cpp  message_utils.cpp
motor_cmds/: CMakeLists.txt  motor_cmds.cpp  package.xml
motor_cmds/msg/: path.msg
motor_cmds/src/: motor_cmds.cpp
obstacle_detector/: CMakeLists.txt  Jenkinsfile  README.md  costmap_plugins.xml  package.xml
obstacle_detector/include/: cv.h  lane_detector.h  point2.hpp
obstacle_detector/include/obstacle_detector/: white_line_costmap_layer.h
obstacle_detector/plugins/: white_line_costmap_layer.cpp
obstacle_detector/src/: cv.cpp  lane_detector.cpp  obstacle_detector.cpp
occupancy_grid_yamltorosnode/: CMakeLists.txt  package.xml  yamltorosnode.cpp
odometry/: CMakeLists.txt  package.xml
odometry/src/: odometry.cpp  odometry_node.cpp
ogyamltoros/: CMakeLists.txt  package.xml
path_planning/goatcontrol_integrated/: CMakeLists.txt  a_star_test.cpp  a_star_test.h  astar_run_matlab_test.cpp  goatcontrol.cpp  (+3 more)
phidgets_encoder/: .gitignore  CMakeLists.txt  README.md  package.xml
phidgets_encoder/cmake/: FindPhidget22.cmake
phidgets_encoder/include/: encoder_state_publisher.h
phidgets_encoder/src/: encoder.cpp  encoder.h  encoder_state_publisher.cpp  node.cpp  phidgets_encoder_node.cpp
phidgets_imu/: .clang_complete  .gitignore  CMakeLists.txt
phidgets_imu/demo/: main.cpp
phidgets_imu/include/: phspat.h
phidgets_imu/src/: err.cpp  err.h  phspat.cpp
robot_nav_plugins/: plugin_loader.cpp
sim_instr/: CMakeLists.txt  LICENSE  package.xml
sim_instr/src/: sim-instr-test.txt  sim_instr_node  sim_instr_node.cpp
sim_motor_cmds/: CMakeLists.txt  package.xml  path_1.txt  sim_motor_cmds.cpp
sim_motor_cmds/src/: circle.txt  counter_circle.txt  figure8.txt  left_acute.txt  path_1.txt  right_acute.txt  sim_motor_cmds.cpp  up.txt
simple_navigation_goals/: CMakeLists.txt  package.xml
simple_navigation_goals/src/: main.cpp
transform_imu/: CMakeLists.txt  README.md  package.xml
transform_imu/src/: imu_transformer.cpp  imu_transformer.h  transform_imu_node.cpp
umigv_utilities/: CMakeLists.txt  README.md  package.xml
umigv_utilities/examples/: enumerate.cpp  filter.cpp  invoke.cpp  ranges.cpp  rosparam.cpp
umigv_utilities/include/umigv_utilities/: enumerate.hpp  exceptions.hpp  filter.hpp  fold.hpp  invoke.hpp  iterator_range.hpp  map.hpp  pairs.hpp  ranges.hpp  reduce.hpp  ros.hpp  rosparam.hpp  traits.hpp  types.hpp  utility.hpp  zip.hpp
umigv_utilities/include/umigv_utilities/detail/: invoke.hpp  invoke_traits.hpp  nth_type.hpp
whiteLineDetection/: CMakeLists.txt  package.xml
white_line_layer_node/: CMakeLists.txt
(+26 files in other folders)
