<package format="2">
  <name>gazebo-odometry</name>
  <version>0.1.0</version>
  <description>Publishes odometry information from Gazebo</description>

  <maintainer email="snoliver@umich.edu">Sean Oliver</maintainer>

  <license>BSD-3</license>

  <url type="repository">https://github.com/umigv/goat</url>

  <author email="snoliver@umich.edu">Sean Oliver</author>

  <depend>catkin</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>gazebo_msgs</depend>


</package>
