<package format="2">
    <name>goat_launch</name>
    <version>0.3.0</version>
    <description>Launchfiles for the GOAT.</description>
    <maintainer email="gregjm@umich.edu">Gregory Meyer</maintainer>
    <license>BSD 3-Clause License</license>

    <url type="repository">https://github.com/umigv/goat_launch</url>
    <author>Gregory Meyer</author>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>cartographer_ros</exec_depend>
    <exec_depend>cmd_vel_selector</exec_depend>
    <exec_depend>dlux_global_planner</exec_depend>
    <exec_depend>dwb_local_planner</exec_depend>
    <exec_depend>encoder_odometry</exec_depend>
    <exec_depend>goat_description</exec_depend>
    <exec_depend>gpsd_client</exec_depend>
    <exec_depend>imu_complementary_filter</exec_depend>
    <exec_depend>imu_temporal_filter_node</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>joy</exec_depend>
    <exec_depend>locomotor</exec_depend>
    <exec_depend>nav_core_adapter</exec_depend>
    <exec_depend>phidgets_encoder</exec_depend>
    <exec_depend>phidgets_imu</exec_depend>
    <exec_depend>robot_localization</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rosserial_python</exec_depend>
    <exec_depend>spatio_temporal_voxel_layer</exec_depend>
    <exec_depend>teleop_twist_joy</exec_depend>
    <exec_depend>transform_imu</exec_depend>
    <exec_depend>velodyne_pointcloud</exec_depend>
    <exec_depend>whiteLineDetection</exec_depend>
    <exec_depend>whiteLineDetection</exec_depend>
</package>
