<package format="2">
    <name>imu_temporal_filter</name>
    <version>0.1.0</version>
    <description>Filters sensor_msgs/Imu messages based on time.</description>
    <maintainer email="gregjm@umich.edu">Gregory Meyer</maintainer>
    <license>BSD 3-Clause License</license>

    <url type="repository">https://github.com/umigv/imu_temporal_filter</url>
    <author>Gregory Meyer</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
</package>
