<package format="2">
	<name>obstacle_detector</name>
	<version>0.2.1</version>
	<description>
		Subscribes to ZED camera and performs OpenCV processing.
	</description>
	<maintainer email="kushalj@umich.edu">Kushal Jaligama</maintainer>
	<maintainer email="gregjm@umich.edu">Gregory Meyer</maintainer>
	<license>BSD 3-Clause License</license>

	<url type="repository">https://github.com/umigv/obstacle-detector</url>
	<author>Kushal Jaligama</author>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>costmap_2d</depend>
	<depend>cv_bridge</depend>
	<depend>goat_msgs</depend>
	<depend>image_geometry</depend>
	<depend>image_transport</depend>
	<depend>pluginlib</depend>
	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>
	<depend>std_msgs</depend>
	<depend>tf2</depend>
	<depend>tf2_geometry_msgs</depend>
	<depend>tf2_ros</depend>
	<depend>umigv_utilities</depend>
 
	<export>
		<costmap_2d plugin="${prefix}/costmap_plugins.xml" />
	</export>
</package>
