<package format="2">
    <name>occupancy_grid</name>
    <version>0.1.0</version>
    <description>The occupancy_grid_yamltorosnode package</description>
    <maintainer email="jmervak@umich.edu">Jeremy Mervak</maintainer>
    <license>BSD-3-Clause</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
</package>
