<?xml version="1.0"?>
<package format="2">
  <name>ogyamltoros</name>
  <version>0.1.0</version>
  <description>The occupancy grid yaml to ros node package</description>
  <maintainer email="jmervak@umich.edu">Jeremy Mervak</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <export></export>
</package>
