<package format = "2">
	<name>phidgets_encoder</name>
	<version>0.3.0</version>
	<description>Interface for Phidgets encoder board.</description>
	<maintainer email="me@gregjm.dev">Gregory Meyer</maintainer>
	<license>BSD 3-Clause License</license>

	<url type="repository">https://github.com/umigv/goat</url>
	<author>Gregory Meyer</author>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>
</package>
