<?xml version="1.0"?>
<repositories>
    <repository>
      <id>goat</id>
      <name>goat</name>
      <url>https://github.com/umigv/goat.git</url>
    </repository>
<package format="2">
  <name>sim_instr</name>
  <version>0.1.1</version>
  <description>Publishes ROS Nodes containing velocity information from a file</description>

  <maintainer email="snoliver@umich.edu">Sean Oliver</maintainer>
  <maintainer email="adortz@umich.edu">Alexandra Dortzbach</maintainer>


  <license>BSD 3-Clause License</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
