<package format="2">
  <name>simple_navigation_goals</name>
  <version>0.1.0</version>
  <description>The simple_navigation_goals package</description>
  <maintainer email="me@gregjm.dev">Gregory Meyer</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geodesy</depend>
  <depend>geographic_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
